email address to button, popup

--- a/Pages/Admin/Admin.cshtml
+++ b/Pages/Admin/Admin.cshtml
@@ -5,7 +5,7 @@
     ViewData["Title"] = "Admin";
 }
 
-<div class="admin_inner">
+<div class="centered_and_left_just">
     
 <h1>Admin</h1>
 <partial name="_FlashPartial" />
