--- a/Pages/Shared/_layout_logged_in.cshtml
+++ b/Pages/Shared/_layout_logged_in.cshtml
@@ -14,6 +14,7 @@
     <meta http-equiv="Pragma" content="no-cache">
     <meta http-equiv="Expires" content="0">
     <title>@ViewData["Title"] - @bd_config.get("AppName")</title>
+    <link rel="stylesheet" href="~/lib/jquery-ui-1.12.1.custom/jquery-ui.min.css" />
     <link rel="stylesheet" href="~/css/budoco.css" />
 
     @{
@@ -87,6 +88,7 @@
 
             <script src="~/lib/jquery/dist/jquery.min.js"></script>
             <script src="~/js/site.js" asp-append-version="true"></script>
+            <script src="~/lib/jquery-ui-1.12.1.custom/jquery-ui.min.js"></script>
 
             @await RenderSectionAsync("Scripts", required: false)
 
