progress with email attachments

--- a/Pages/Admin/Admin.cshtml
+++ b/Pages/Admin/Admin.cshtml
@@ -26,7 +26,7 @@
 
 <h1>Under Construction</h1>
 <div><a href="/Admin/Email">Email</a></div>
-@{if (bd_config.get("DebugEnableRunSql") == 1) 
+@{if (bd_config.get(bd_config.DebugEnableRunSql) == 1) 
 {                            
 <div><a href="/Admin/RunSql">RunSql</a></div>
 }}
