--- a/Pages/Shared/_layout_logged_in.cshtml
+++ b/Pages/Shared/_layout_logged_in.cshtml
@@ -13,14 +13,14 @@
     <meta http-equiv="Cache-Control" content="no-cache, no-store, must-revalidate">
     <meta http-equiv="Pragma" content="no-cache">
     <meta http-equiv="Expires" content="0">
-    <title>@ViewData["Title"] - @bd_config.get("AppName")</title>
+    <title>@ViewData["Title"] - @bd_config.get(bd_config.AppName)</title>
     <link rel="stylesheet" href="~/lib/jquery-ui-1.12.1.custom/jquery-ui.min.css" />
     <link rel="stylesheet" href="~/css/budoco.css" />
 
     @{
-        if (bd_config.get("UseCustomCss") == 1)
+        if (bd_config.get(bd_config.UseCustomCss) == 1)
         {
-            string custom_css_filename = bd_config.get("CustomCssFilename");
+            string custom_css_filename = bd_config.get(bd_config.UseCustomCss);
             <link rel="stylesheet" href="/@custom_css_filename" />
         }
     }
@@ -52,7 +52,7 @@
         <body>
             <table class="menu_table">
                 <tr>
-                    <td class="logo"><a asp-page="/Index">@bd_config.get("AppName")</a></td>
+                    <td class="logo"><a asp-page="/Index">@bd_config.get(bd_config.AppName)</a></td>
 
                     <td><a asp-page="/Issues">View Issues</a></td>
                     <td><a asp-page="/Issue">Create Issue</a></td>
@@ -62,7 +62,7 @@
                         {
                             <td><a asp-page="/Admin/Admin">Admin</a></td>
                             <td><a asp-page="/Admin/Users">Users</a></td>
-                            if (bd_config.get("DebugEnableRunSql") == 1)
+                            if (bd_config.get(bd_config.DebugEnableRunSql) == 1)
                             {
                                 <td><a asp-page="/Admin/RunSql">Run Sql</a></td>
                             }
