--- a/Pages/Shared/_unused_Layout.cshtml
+++ b/Pages/Shared/_unused_Layout.cshtml
@@ -21,7 +21,7 @@
     <header>
         <nav class="navbar navbar-expand-sm navbar-toggleable-sm navbar-light bg-white border-bottom box-shadow mb-3">
             <div class="container">
-                <a class="navbar-brand" asp-area="" asp-page="/Index">@bd_config.get("AppName")</a>
+                <a class="navbar-brand" asp-area="" asp-page="/Index">@bd_config.get(bd_config.AppName)</a>
                 <button class="navbar-toggler" type="button" data-toggle="collapse" data-target=".navbar-collapse"
                     aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
                     <span class="navbar-toggler-icon"></span>
@@ -34,9 +34,9 @@
                         @{
                             if (is_admin)
                             {
-                                <li class="nav-item">
-                                    <a class="nav-link text-dark" asp-area="" asp-page="/Admin/Admin">Admin</a>
-                                </li>
+                                        <li class="nav-item">
+                                            <a class="nav-link text-dark" asp-area="" asp-page="/Admin/Admin">Admin</a>
+                                        </li>
                             }
                         }
                         <li class="nav-item">
