prepping for email queue

--- a/Pages/Register.cshtml
+++ b/Pages/Register.cshtml
@@ -21,7 +21,7 @@
     </tr>
     <tr>
         <td><label>Email</label>
-        <td><input type="email" asp-for="email" />
+        <td><input type="email" asp-for="email_address" />
     </tr>
     <tr>
         <td><label>Create a password</label>
