--- a/Pages/Admin/Admin.cshtml
+++ b/Pages/Admin/Admin.cshtml
@@ -25,7 +25,7 @@
 <br>
 
 <h1>Under Construction</h1>
-<div><a href="/Admin/Email">Email</a></div>
+<div><a href="/Admin/EmailQueue">Outgoing Email Queue</a></div>
 @{if (bd_config.get(bd_config.DebugEnableRunSql) == 1) 
 {                            
 <div><a href="/Admin/RunSql">RunSql</a></div>
