--- a/Pages/Shared/_IssuePostsPartial.cshtml
+++ b/Pages/Shared/_IssuePostsPartial.cshtml
@@ -49,6 +49,7 @@
                         }
 
                     </div>
+                    <!--end post-->
                 }
             }
         </div>
