--- a/Pages/Shared/_layout_signed_out.cshtml
+++ b/Pages/Shared/_layout_signed_out.cshtml
@@ -20,7 +20,7 @@
         if (bd_config.get(bd_config.UseCustomCss) == 1)
         {
             string custom_css_filename = bd_config.get(bd_config.CustomCssFilename);
-            <link rel="stylesheet" href="/@custom_css_filename" />
+                    <link rel="stylesheet" href="/@custom_css_filename" />
         }
     }
 
@@ -37,8 +37,8 @@
 </head>
 
 @{
-    bd_util.console_write_line("layout_simple http status: " +
-            HttpContextAccessor.HttpContext.Response.StatusCode.ToString());
+    bd_util.log("layout_simple http status: " +
+                    HttpContextAccessor.HttpContext.Response.StatusCode.ToString());
     if (HttpContextAccessor.HttpContext.Response.StatusCode == 302)
     {
 
@@ -50,25 +50,25 @@
     {
 
         <body>
-            <table class="menu_table">
-                <tr>
-                    <td class="logo"><a asp-page="/Index">@bd_config.get(bd_config.AppName)</a></td>
+                    <table class="menu_table">
+                        <tr>
+                            <td class="logo"><a asp-page="/Index">@bd_config.get(bd_config.AppName)</a></td>
 
-                    <td class="just_right">
+                            <td class="just_right">
 
-                        <a href="/About">About</a>
-                    </td>
-                </tr>
-            </table>
+                                <a href="/About">About</a>
+                            </td>
+                        </tr>
+                    </table>
 
-            <div class="content_parent">
-                @RenderBody()
-            </div>
+                    <div class="content_parent">
+                        @RenderBody()
+                    </div>
 
-            <script src="~/lib/jquery/dist/jquery.min.js"></script>
-            <script src="~/js/site.js" asp-append-version="true"></script>
+                    <script src="~/lib/jquery/dist/jquery.min.js"></script>
+                    <script src="~/js/site.js" asp-append-version="true"></script>
 
-            @await RenderSectionAsync("Scripts", required: false)
+                    @await RenderSectionAsync("Scripts", required: false)
 
         </body>
     }
