html emails working

--- a/Pages/Issue.cshtml
+++ b/Pages/Issue.cshtml
@@ -428,6 +428,11 @@
         $(".post_email_to_select").css("visibility", "hidden");
     }
 
+    function resizeIframe(obj) {
+        console.log(obj)
+        obj.style.height = obj.contentWindow.document.documentElement.scrollHeight + 'px';
+    }
+
     </script>
 
 }
