--- a/Pages/Shared/_IssuePostsPartial.cshtml
+++ b/Pages/Shared/_IssuePostsPartial.cshtml
@@ -15,7 +15,9 @@
                                 <div class="info_text">
                                     Comment by @dr["us_username"] on @dr["p_created_date"]&nbsp;&nbsp;post id#@p_id
                                 </div>
+                                <pre class="post_text">@dr["p_text"]</pre>
                             }
+
                             else if (post_type == "email")
                             {
                                 <div class="info_text">
@@ -24,16 +26,29 @@
                                 <div>
                                     <span>To: @dr["p_email_to"]</span>
                                 </div>
+
+                                <pre class="post_text">@dr["p_text"]</pre>
                             }
+
                             else if (post_type == "reply")
                             {
                                 <div class="info_text">
                                     Email received from @dr["p_email_from"] on @dr["p_created_date"]&nbsp;&nbsp;post id#@p_id
                                 </div>
+                                string html_part = (string)dr["p_email_from_html_part"];
+                                if (html_part != "")
+                                {
+                                    <iframe onload="resizeIframe(this)" class="html_part_iframe" src="HtmlPart?p_id=@p_id">
+                                    </iframe>
+                                }
+                                else
+                                {
+                                    <pre class="post_text">@dr["p_text"]</pre>
+                                }
                             }
-                            <div class="post_text">
-                                <pre>@dr["p_text"]</pre>
-                            </div>
+
+
+
                             DataTable dt_files = Model.GetPostAttachments(p_id);
                             foreach (DataRow file_row in dt_files.Rows)
                             {
