--- a/Pages/Issue.cshtml
+++ b/Pages/Issue.cshtml
@@ -289,7 +289,7 @@
         && $("#uploaded_file3").val() == "";
 
         if ($('#post_text').val().trim() == "" && no_file) {
-            alert("Some text or a file is required");
+            alert("Some text or a file is required.");
             return;
         }
 
