let admin change password

--- a/Pages/ResetPassword.cshtml
+++ b/Pages/ResetPassword.cshtml
@@ -23,6 +23,18 @@
         <td><label>Re-enter password</label>
         <td><input type="password" asp-for="retyped_password" />
     </tr>
+    @{
+        if (Model.username == "admin")
+        {
+    <tr>
+        
+        <td><label>Email</label>
+        <td>
+            <div>Set this to a your real email address.</div>
+            <input type="email" asp-for="email"/>
+    </tr>
+        }
+    }
     <tr>
         <td><button type="submit">Reset Password</button>
     </tr>
