--- a/Pages/Admin/User.cshtml
+++ b/Pages/Admin/User.cshtml
@@ -24,7 +24,7 @@
     </tr>
     <tr>
         <td><label>Email</label>
-        <td><input asp-for="email" value="@Model.email"></input>
+        <td><input type="email" asp-for="email" value="@Model.email"></input>
     </tr>
     <tr>
         <td><label>Admin</label>
