--- a/Pages/ResetPasswordRequest.cshtml
+++ b/Pages/ResetPasswordRequest.cshtml
@@ -16,7 +16,7 @@
 <div class="form_div">
     <form method="post">
         <div><label>Email you registered with:</label>
-            <input asp-for="email" />
+            <input type="email" asp-for="email" />
         </div>
         <div><button type="submit">Request Password Reset</button></div>
     </form>
