cleaned up unnecessary value=

--- a/Pages/Admin/Query.cshtml
+++ b/Pages/Admin/Query.cshtml
@@ -20,13 +20,13 @@
             {
         <tr>
             <td><label>Id</label>
-            <td><input asp-for="id" value="@Model.id" disabled></input>
+            <td><input asp-for="id" disabled></input>
         </tr>
             }
         }
         <tr>
             <td><label>Name</label>
-            <td><input class="issue_query_name_input" asp-for="name" value="@Model.name"></input>
+            <td><input class="issue_query_name_input" asp-for="name"></input>
         </tr>
         <tr>
             <td colspan="99"><label>Active</label>
