--- a/Pages/Admin/Status.cshtml
+++ b/Pages/Admin/Status.cshtml
@@ -20,7 +20,7 @@
     {
     <div>
         <label>Id</label>
-        <input asp-for="id" value="@Model.id" disabled></input>
+        <input asp-for="id" disabled></input>
     </div>
     }
 }
