--- a/Pages/Admin/User.cshtml
+++ b/Pages/Admin/User.cshtml
@@ -16,15 +16,15 @@
     <table class="form_table">
     <tr>
         <td><label>Id</label>
-        <td><input asp-for="id" value="@Model.id" disabled></input>
+        <td><input asp-for="id" disabled></input>
     </tr>
     <tr>
         <td><label>Username</label>
-        <td><input asp-for="username" value="@Model.username"></input>
+        <td><input asp-for="username"/>
     </tr>
     <tr>
         <td><label>Email</label>
-        <td><input type="email" asp-for="email" value="@Model.email"></input>
+        <td><input type="email" asp-for="email"/>
     </tr>
     <tr>
         <td><label>Admin</label>
