--- a/Pages/Issue.cshtml
+++ b/Pages/Issue.cshtml
@@ -61,12 +61,12 @@
         
         <tr>
             <td><label>Description</label>
-            <td colspan=3><input class="issue_description_input" asp-for="description" value="@Model.description" disabled="@Model.null_or_disabled"></input>
+            <td colspan=3><input class="issue_description_input" asp-for="description" disabled="@Model.null_or_disabled"></input>
         </tr>
 
         <tr>
             <td><label>Details</label>
-            <td colspan=3><textarea class="issue_textarea" asp-for="details" value="@Model.details" disabled="@Model.null_or_disabled"></textarea>
+            <td colspan=3><textarea class="issue_textarea" asp-for="details" disabled="@Model.null_or_disabled"></textarea>
         </tr>
         
 
