added user settings page

--- a/Pages/Shared/_layout_logged_in.cshtml
+++ b/Pages/Shared/_layout_logged_in.cshtml
@@ -93,6 +93,7 @@
                     </td>
 
                     <td class="just_right">
+                        <a href="/UserSettings">@bd_util.get_username_from_session(Context)</a>
                         <a href="/Login?action=signout">Sign Out</a>
                         <a href="/About">About</a>
                     </td>
