--- a/Pages/_ViewImports.cshtml
+++ b/Pages/_ViewImports.cshtml
@@ -2,5 +2,11 @@
 @using System.Data.SqlClient
 @using System.Data
 @using System.Data.Common
+@using System.Collections.Generic;
+@using Microsoft.AspNetCore.Http;
+@using Microsoft.AspNetCore.Mvc;
+@using Microsoft.AspNetCore.Mvc.RazorPages;
+@using Microsoft.AspNetCore.Mvc.Rendering;
+
 @namespace budoco.Pages
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
