--- a/Pages/Admin/User.cshtml
+++ b/Pages/Admin/User.cshtml
@@ -24,7 +24,7 @@
     </tr>
     <tr>
         <td><label>Email</label>
-        <td><input type="email" asp-for="email"/>
+        <td><input type="email" asp-for="email_address"/>
     </tr>
     <tr>
         <td><label>Admin</label>
