added admin/logs for viewing logs

--- a/Pages/Admin/Admin.cshtml
+++ b/Pages/Admin/Admin.cshtml
@@ -27,7 +27,7 @@
 
 <div>
     <a href="/Admin/Queries">Issue Queries</a> 
-    - Customize the different "Views" of issues you see on the "Issues" page.
+    - Customize the different "Views" of issues you see on the Issues page.
 </div>
 <br>
 
@@ -45,7 +45,7 @@
 }}
 
 <div>
-    <a href="/Admin/Logs">Logs</a> - Under construction
+    <a href="/Admin/Logs">Logs</a> - View and download log files.
 </div>
 
 @section Scripts {
